# frontend

./: .clang-format  .gitignore  Makefile  README.md  buildall.sh  common.mk  gen_lang.sh  gen_verify.sh  setvars.sh  xtool.sh
common/: Makefile  anim.c  anim.h  archive.c  archive.h  array.c  array.h  audio.c  audio.h  battery.c  battery.h  bluetooth.c  bluetooth.h  board.c  board.h  catalogue.c  catalogue.h  collection.c  collection.h  collection_tag.c  collection_tag.h  collection_theme.c  collection_theme.h  colour.c  colour.h  common.c  common.h  common_core.c  common_core.h  config.c  config.h  config_reader.c  config_reader.h  content.c  content.h  content_item.h  content_items.c  content_items.h  control.c  control.h  (+96 more)
extra/: Makefile  sdl2_term  sdl2_term.c
font/: Makefile  awesome_small.h  gamepad.h  gamepad_nav.c  gamepad_nav.h  notosans.c  notosans.h  notosans_ar.c  notosans_ar.h  notosans_ar_medium.c  notosans_ar_medium.h  notosans_big.c  notosans_big.h  notosans_big_hd.c  notosans_big_hd.h  notosans_jp.h  notosans_jp_medium.h  notosans_kr.h  notosans_kr_medium.h  notosans_medium.c  notosans_medium.h  notosans_sc.h  notosans_sc_medium.h  notosans_tc.h  notosans_tc_medium.h
muxlaunch/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_comp_hook.c  ui_events.h  ui_font_AwesomeSmall.c  ui_helpers.c  ui_helpers.h  ui_img_muoskofi_png.c  ui_img_nothing_png.c  ui_scrLaunch.c
muxsplash/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_font_AwesomeBrand.c  ui_helpers.c  ui_helpers.h  ui_img_muoskofi_png.c  ui_img_nothing_png.c  ui_scrSplash.c
(+1786 files in other folders)
